packages/shared-skills/skills/programming/fixtures/java/no-excuse/fail/vague-name/BadManager.java
package sample.bad;

class BadManager {
}
